--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,11 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+
+  @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
